workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:21:36 **** Incremental Build of configuration Debug for project midterm ****
make all 
make: Nothing to be done for `all'.
17:21:38 **** Incremental Build of configuration Debug for project 235_lab06 ****
make all 
make: Nothing to be done for `all'.
17:21:44 **** Incremental Build of configuration Debug for project midterm ****
make all 
make: Nothing to be done for `all'.
17:22:28 **** Incremental Build of configuration Debug for project 235_lab06 ****
make all 
make: Nothing to be done for `all'.
17:22:28 **** Incremental Build of configuration Debug for project midterm ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: midterm
Invoking: GCC C++ Linker
g++  -o "midterm"  ./Person.o ./Team.o ./main.o   
Finished building target: midterm
 
17:22:31 **** Incremental Build of configuration Debug for project midterm ****
make all 
make: Nothing to be done for `all'.
17:23:29 **** Incremental Build of configuration Debug for project midterm ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
../main.cpp: In function ‘int main()’:
../main.cpp:68:10: error: expected ‘;’ before ‘}’ token
          }
          ^
../main.cpp:68:10: warning: statement has no effect [-Wunused-value]
make: *** [main.o] Error 1
17:23:50 **** Incremental Build of configuration Debug for project 235_lab05 ****
make all 
Building file: ../Factory.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Factory.d" -MT"Factory.d" -o "Factory.o" "../Factory.cpp"
Finished building: ../Factory.cpp
 
Building file: ../Pathfinder.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Pathfinder.d" -MT"Pathfinder.d" -o "Pathfinder.o" "../Pathfinder.cpp"
Finished building: ../Pathfinder.cpp
 
Building file: ../test.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test.d" -MT"test.d" -o "test.o" "../test.cpp"
Finished building: ../test.cpp
 
Building target: 235_lab05
Invoking: MacOS X C++ Linker
g++  -o "235_lab05"  ./Factory.o ./Pathfinder.o ./test.o   
Finished building target: 235_lab05
 
17:23:51 **** Incremental Build of configuration Debug for project 235_lab06 ****
make all 
make: Nothing to be done for `all'.
17:23:52 **** Incremental Build of configuration Debug for project midterm ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
../main.cpp: In function ‘int main()’:
../main.cpp:68:10: error: expected ‘;’ before ‘}’ token
          }
          ^
../main.cpp:68:10: warning: statement has no effect [-Wunused-value]
make: *** [main.o] Error 1
17:24:00 **** Incremental Build of configuration Debug for project 235_lab05 ****
make all 
make: Nothing to be done for `all'.
17:24:00 **** Incremental Build of configuration Debug for project 235_lab06 ****
make all 
make: Nothing to be done for `all'.
17:24:00 **** Incremental Build of configuration Debug for project midterm ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
../main.cpp: In function ‘int main()’:
../main.cpp:68:10: error: expected ‘;’ before ‘}’ token
          }
          ^
../main.cpp:68:10: warning: statement has no effect [-Wunused-value]
make: *** [main.o] Error 1
17:24:06 **** Incremental Build of configuration Debug for project 235_lab05 ****
make all 
make: Nothing to be done for `all'.
17:24:06 **** Incremental Build of configuration Debug for project 235_lab06 ****
make all 
make: Nothing to be done for `all'.
17:24:07 **** Incremental Build of configuration Debug for project midterm ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
../main.cpp: In function ‘int main()’:
../main.cpp:68:10: error: expected ‘;’ before ‘}’ token
          }
          ^
../main.cpp:68:10: warning: statement has no effect [-Wunused-value]
make: *** [main.o] Error 1
17:24:18 **** Incremental Build of configuration Debug for project midterm ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: midterm
Invoking: GCC C++ Linker
g++  -o "midterm"  ./Person.o ./Team.o ./main.o   
Finished building target: midterm
 
17:25:22 **** Incremental Build of configuration Debug for project 235_lab05 ****
make all 
make: Nothing to be done for `all'.
17:25:22 **** Incremental Build of configuration Debug for project 235_lab06 ****
make all 
make: Nothing to be done for `all'.
17:25:22 **** Incremental Build of configuration Debug for project midterm ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: midterm
Invoking: GCC C++ Linker
g++  -o "midterm"  ./Person.o ./Team.o ./main.o   
Finished building target: midterm
 
17:25:24 **** Incremental Build of configuration Debug for project midterm ****
make all 
make: Nothing to be done for `all'.
17:25:39 **** Incremental Build of configuration Debug for project 235_lab05 ****
make all 
make: Nothing to be done for `all'.
17:25:40 **** Incremental Build of configuration Debug for project 235_lab06 ****
make all 
make: Nothing to be done for `all'.
17:25:40 **** Incremental Build of configuration Debug for project midterm ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: midterm
Invoking: GCC C++ Linker
g++  -o "midterm"  ./Person.o ./Team.o ./main.o   
Finished building target: midterm
 
17:25:42 **** Incremental Build of configuration Debug for project midterm ****
make all 
make: Nothing to be done for `all'.
17:26:41 **** Incremental Build of configuration Debug for project 235_lab05 ****
make all 
make: Nothing to be done for `all'.
17:26:41 **** Incremental Build of configuration Debug for project 235_lab06 ****
make all 
make: Nothing to be done for `all'.
17:26:41 **** Incremental Build of configuration Debug for project midterm ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: midterm
Invoking: GCC C++ Linker
g++  -o "midterm"  ./Person.o ./Team.o ./main.o   
Finished building target: midterm
 
17:31:00 **** Incremental Build of configuration Debug for project 235_lab05 ****
make all 
make: Nothing to be done for `all'.
17:31:00 **** Incremental Build of configuration Debug for project 235_lab06 ****
make all 
make: Nothing to be done for `all'.
17:31:00 **** Incremental Build of configuration Debug for project midterm ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
../main.cpp: In function ‘int main()’:
../main.cpp:88:7: error: expected ‘;’ before ‘}’ token
       }
       ^
make: *** [main.o] Error 1
